objects/infy_dm__Failed_Jobs__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__Data_Masking_Object_Config__c</fullName>
        <label>Data Masking Object Config</label>
        <referenceTo>infy_dm__Data_Masking_Object_Config__c</referenceTo>
        <relationshipLabel>Failed Jobs</relationshipLabel>
        <relationshipName>Failed_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>infy_dm__Failed_Record_Ids__c</fullName>
        <label>Failed Record Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Failed Jobs</label>
    <listViews>
        <fullName>infy_dm__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>infy_dm__Data_Masking_Object_Config__c</columns>
        <columns>infy_dm__Object_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Failed Jobs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>